[package]
name = "emb-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native"]
native = ["esp-idf-sys/native"]

[dependencies]
anyhow = "1.0.75"
esp-idf-hal = "0.41.2"
esp-idf-svc = { version = "0.46.2", features = ["experimental", "alloc"] }
esp-idf-sys = { version = "0.33.2", features = ["binstart"] }
log = "0.4.20"
toml-cfg = "0.1.3"

[build-dependencies]
anyhow = "1.0.75"
embuild = "0.31.3"
toml-cfg = "0.1.3"
